Data information added

--- a/week_4.ipynb
+++ b/week_4.ipynb
@@ -13,33 +13,8 @@
    "source": [
     "    X is a software company and their customer company Y is based in New York organizing event. Company X and Y deal with a project and currently work on a this project to organize an event for 5 days for a group of developers from all over the world.\n",
     "    Company Y has determine to a program including, hotels, hall of meetings, places for visiting, places for shopping, restaurants, cafes etc.\n",
-    "    Company Y has to show the list of places in New York to attendees, including cafes, restaurants, hall of meetings, hotels etc. It has provide a map in case attendee "
+    "    Company Y has to show the list of places in New York to attendees, including cafes, restaurants, hall of meetings, hotels etc. It has provide a map in case attendee can't use here mobile application for any reason."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
